# larana

./: CMakeLists.txt  CMakePresets.json
Calorimetry/: BezierCalorimetry_module.cc  CMakeLists.txt  Calorimetry_module.cc  GNUmakefile  GeneralCalorimetry_module.cc  PrintCalorimetry_module.cc  TrackCalorimetryAlg.cxx  TrackCalorimetryAlg.h  TrackCalorimetry_module.cc  calorimetry.fcl  calorimetry_dune10kt.fcl  calorimetry_lbne10kt.fcl  calorimetry_lbne35t.fcl  calorimetry_microboone.fcl
CosmicRemoval/: BeamFlashTrackMatchTaggerAlg.cxx  BeamFlashTrackMatchTaggerAlg.h  BeamFlashTrackMatchTagger_module.cc  CMakeLists.txt  CRHitRemoval_module.cc  CosmicClusterTagger_module.cc  CosmicPCAxisTagger_module.cc  CosmicPFParticleTagger_module.cc  CosmicRemovalAna_module.cc  CosmicTagger_module.cc  CosmicTagger_module.cc_DEPRECATED  CosmicTrackTagger_module.cc  FlashHypothesisAna_module.cc  FlashHypothesisTruthAna_module.cc  GeometryCosmicTaggerAlg.cxx  HitTagAssociatorAlg.cxx  TrackContainmentAnalyzer_module.cc  TrackContainmentTagger_module.cc  cosmicremovalmodule.fcl  cosmicremovalmodules.fcl  cosmictagger.fcl
OpticalDetector/: AlgoFirstPeak.cxx  AlgoFirstPeak.h  AlgoFixedWindow.cxx  AlgoFixedWindow.h  AlgoLBNE.cxx  AlgoLBNE.h  AlgoPedestal.cxx  AlgoPedestal.h  AlgoSiPM.cxx  AlgoSiPM.h  AlgoSlidingWindow.cxx  AlgoSlidingWindow.h  AlgoThreshold.cxx  AlgoThreshold.h  BeamFlashCompatibilityCheck_module.cc  BoDataFrameInput_module.cc  CMakeLists.txt  DefaultOpDetResponse.h  DefaultOpDetResponse_service.cc  FIFOHistogramAna_module.cc  FlashClusterMatch_module.cc  FlashHypothesis.cxx  FlashHypothesis.h  FlashHypothesisAlg.cxx  FlashHypothesisAlg.h  FlashHypothesisAnaAlg.cxx  FlashHypothesisAnaAlg.h  FlashHypothesisAna_module.cc  FlashHypothesisCalculator.cxx  FlashHypothesisCalculator.h  FlashHypothesisComparison.cxx  FlashHypothesisComparison.h  FlashHypothesisCreator.cxx  FlashHypothesisCreator.h  FlashPurityCheckAna_module.cc  GNUmakefile  LEDCalibrationAna_module.cc  MicrobooneOpDetResponse.h  MicrobooneOpDetResponse_service.cc  OpDetResponseInterface.h  (+40 more)
ParticleIdentification/: CMakeLists.txt  Chi2ParticleID_module.cc  GNUmakefile  MVAAlg.cxx  MVAAlg.h  MVAPID_module.cc  PIDAAlg.cxx  PIDAAlg.h  PIDAAnalyzer_module.cc  particleid.fcl  particleid_argoneut.fcl  particleid_microboone.fcl  pid.fcl  pidalgorithms.fcl
T0Finder/: CMakeLists.txt  MCTruthT0Matching_module.cc  PhotonCounterT0Matching_module.cc  (+2 more)
larana/CosmicRemoval/: BeamFlashTrackMatchTaggerAlg.cxx  BeamFlashTrackMatchTaggerAlg.h  BeamFlashTrackMatchTagger_module.cc  CMakeLists.txt  CRHitRemovalByPCA_module.cc  CRHitRemoval_module.cc  CosmicClusterTagger_module.cc  CosmicPCAxisTagger_module.cc  CosmicPFParticleTagger_module.cc  CosmicRemovalAna_module.cc  CosmicTrackTagger_module.cc  HitTagAssociatorAlg.cxx  HitTagAssociatorAlg.h  TrackContainmentAnalyzer_module.cc  TrackContainmentTagger_module.cc  TrackPFParticleMatch_module.cc  cosmicremovalmodules.fcl  cosmictagger.fcl
larana/CosmicRemoval/TrackContainment/: CMakeLists.txt  TrackContainmentAlg.cxx  TrackContainmentAlg.hh
larana/OpticalDetector/: AlgoCFDMaker_tool.cc  AlgoFixedWindow.cxx  AlgoFixedWindowMaker_tool.cc  AlgoSiPMMaker_tool.cc  AlgoSlidingWindowMaker_tool.cc  AlgoThreshold.cxx  AlgoThresholdMaker_tool.cc  BeamFlashCompatibilityCheck_module.cc  BoDataFrameInput_module.cc  CMakeLists.txt  DefaultOpDetResponse.h  DefaultOpDetResponse_service.cc  FIFOHistogramAna_module.cc  FlashClusterMatch_module.cc  FlashHypothesis.cxx  FlashHypothesis.h  FlashHypothesisAnaAlg.cxx  FlashHypothesisAnaAlg.h  FlashHypothesisAna_module.cc  FlashHypothesisCalculator.cxx  FlashHypothesisCalculator.h  FlashHypothesisComparison.cxx  FlashHypothesisComparison.h  FlashHypothesisCreator.cxx  FlashHypothesisCreator.h  FlashPurityCheckAna_module.cc  FlashUtilities.cxx  FlashUtilities.h  HitAlgoMakerToolBase.h  IHitAlgoMakerTool.h  IPedAlgoMakerTool.h  LEDCalibrationAna_module.cc  MicrobooneOpDetResponse.h  MicrobooneOpDetResponse_service.cc  OpDetResponseInterface.h  OpDigiAna_module.cc  OpDigiProperties.cc  OpDigiProperties.h  OpDigiProperties_service.cc  OpFlashAlg.cxx  (+35 more)
larana/OpticalDetector/OpHitFinder/: AlgoCFD.cxx  AlgoCFD.h  AlgoFixedWindow.cxx  AlgoFixedWindow.h  AlgoSiPM.cxx  AlgoSiPM.h  AlgoSlidingWindow.cxx  AlgoSlidingWindow.h  AlgoThreshold.cxx  AlgoThreshold.h  CMakeLists.txt  OpHitAlg.cxx  OpHitAlg.h  OpticalRecoException.cxx  OpticalRecoException.h  PMTPedestalBase.cxx  PMTPedestalBase.h  PMTPulseRecoBase.cxx  PMTPulseRecoBase.h  PedAlgoEdges.cxx  PedAlgoEdges.h  PedAlgoRmsSlider.cxx  PedAlgoRmsSlider.h  PedAlgoRollingMean.cxx  PedAlgoRollingMean.h  PedAlgoUB.cxx  PedAlgoUB.h  PulseRecoManager.cxx  PulseRecoManager.h  UtilFunc.cxx  UtilFunc.h
larana/OpticalDetector/OpHitFinder/RiseTimeTools/: CMakeLists.txt  RiseTimeCalculatorBase.h  RiseTimeGaussFit_tool.cc  RiseTimeThreshold_tool.cc  risetimecalculator_tool.fcl
larana/ParticleIdentification/: CMakeLists.txt  Chi2PIDAlg.cxx  Chi2PIDAlg.h  Chi2ParticleID_module.cc  MVAAlg.cxx  MVAAlg.h  MVAPID_module.cc  PIDAAlg.cxx  PIDAAlg.h  PIDAAnalyzer_module.cc  particleid.fcl  particleid_microboone.fcl  pid.fcl  pidalgorithms.fcl
larana/ParticleIdentification/scripts/: CalcPropLikeRatio.C  TrainMVA.C  TrainMVA.sh  makedict.sh  runPID.fcl  runPID_noMVA.fcl
larana/T0Finder/: CMakeLists.txt  MCParticleHitMatching_module.cc  MCParticleShowerMatching_module.cc  MCParticleTrackMatching_module.cc  MCTruthT0Matching_module.cc  PhotonCounterT0Matching_module.cc  mctrutht0matching.fcl  photoncountert0matching.fcl
larana/T0Finder/AssociationsTools/: CMakeLists.txt  DirectHitParticleAssns_tool.cc  DirectHitParticleAssns_tool.cxx  DirectHitParticleAssns_tool.h  IHitParticleAssociations.h  IndirectHitParticleAssns_tool.cc  IndirectHitParticleAssns_tool.cxx  IndirectHitParticleAssns_tool.h  hitparticleassociations.fcl
larana/TruncatedMean/: CMakeLists.txt
larana/TruncatedMean/Algorithm/: CMakeLists.txt  TruncMean.cxx  TruncMean.h
test/OpticalDetector/: AlgoThreshold_test.cc  CMakeLists.txt  OpFlashAlg_test.cc  standalone_test.cc
(+27 files in other folders)
