add_subdirectory(TrackContainment)

art_make(
  LIB_LIBRARIES
    ${ART_UTILITIES}
    ${FHICLCPP}
    ROOT::Core
    ROOT::Hist
    ROOT::Physics
    cetlib_except
    larcorealg_Geometry
    lardataobj_AnalysisBase
    lardataobj_RecoBase
    larsim_PhotonPropagation_PhotonVisibilityService_service
    nusimdata_SimulationBase
  MODULE_LIBRARIES
    ${ART_FRAMEWORK_SERVICES_REGISTRY}
    ${ART_ROOT_IO_TFILESERVICE_SERVICE}
    ${ART_ROOT_IO_TFILE_SUPPORT}
    ${MF_MESSAGELOGGER}
    ROOT::Core
    ROOT::Physics
    ROOT::Tree
    larana_CosmicRemoval
    larana_CosmicRemoval_TrackContainment
    larcorealg_Geometry
    lardata_ArtDataHelper
    lardataobj_AnalysisBase
    lardataobj_RecoBase
    larreco_RecoAlg_Cluster3DAlgs
  )

install_headers()
install_fhicl()
install_source()
