add_subdirectory(TrackContainment)

art_make(
  LIB_LIBRARIES
    ${ART_UTILITIES}
    fhiclcpp::fhiclcpp
    ROOT::Core
    ROOT::Hist
    ROOT::Physics
    cetlib_except::cetlib_except
    larcorealg_Geometry
    lardataobj_AnalysisBase
    lardataobj_RecoBase
    larsim_PhotonPropagation_PhotonVisibilityService_service
    nusimdata_SimulationBase
  MODULE_LIBRARIES
    art::Framework_Services_Registry
    art_root_io::TFileService_service
    art_root_io::tfile_support
    messagefacility::MF_MessageLogger
    ROOT::Core
    ROOT::Physics
    ROOT::Tree
    larana_CosmicRemoval
    larana_CosmicRemoval_TrackContainment
    lardataalg_DetectorInfo
    larcorealg_Geometry
    lardata_ArtDataHelper
    lardataobj_AnalysisBase
    lardataobj_RecoBase
    larreco_RecoAlg_Cluster3DAlgs
  )

install_headers()
install_fhicl()
install_source()
