art_make(
  LIB_LIBRARIES
    ${ART_FRAMEWORK_PRINCIPAL}
    ${ART_FRAMEWORK_SERVICES_REGISTRY}
    ${ART_PERSISTENCY_PROVENANCE}
    ${ART_ROOT_IO_TFILESERVICE_SERVICE}
    ${ART_ROOT_IO_TFILE_SUPPORT}
    art_Utilities
    ${FHICLCPP}
    ${MF_MESSAGELOGGER}
    ROOT::Core
    ROOT::Hist
    ROOT::MathCore
    ROOT::Physics
    ROOT::RIO
    ROOT::TMVA
    ROOT::Tree
    canvas
    cetlib
    cetlib_except
    larcorealg_Geometry
    lardataobj_AnalysisBase
    larreco_Calorimetry
    nusimdata_SimulationBase
  MODULE_LIBRARIES
   larana_ParticleIdentification
  )

install_headers()
install_fhicl()
install_source()

add_subdirectory(scripts)
